# botnik-discord-bot

./: .gitignore  LICENSE  README.md  const.py  main.py  pip.conf  pyproject.toml  tmp.py  troubleshooting.txt  utils.py
